# hello_sway

./: Cargo.toml  Forc.toml
src/: subcurrency.sw  test_contract.sw
tests/: harness.rs
