[package]
name = "hello_sway"
version = "0.1.0"
authors = ["x"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }
fuels-abigen-macro = "0.1"
fuels-core = "0.1"
fuels-rs = "0.1"
fuel-gql-client = { version = "0.1", default-features = false }
fuel-tx = "0.1"
rand = "0.8"

[[test]]
name = "integration_tests"
path = "tests/harness.rs"
harness = true
